fixed search so it works across all visualization modes

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -559,6 +559,12 @@ div.search {
   margin-bottom: -.6em;
 }
 
+#footer-panel {
+  position: absolute;
+  bottom: 0px;
+  height: 40px;
+  left: 20px;
+}
 .tabs {
   width:100%;
   display:inline-block;
