--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,6 +35,7 @@
    </div>
    <ul>
       <li id="full-results"><span class="padded">Full Results</span></li>
+      <li id="hide-full-results"><span class="padded">Hide Full Results</span></li>
       <li id="pin"><span class="padded">Pin</span></li>
       <li id="unpin"><span class="padded">Unpin</span></li>
       <li id="trace"><span class="padded">Trace Path</span></li>
