more data being displayed in full results

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,10 +27,42 @@
             <td class="label" id="title-label">Title:</td>
             <td class="title">Fake</td>
          </tr>
-         <tr>
+        <tr id="author" style="display:none;">
+          <td class="label">Author:</td>
+          <td id="author" class="size">-</td>
+        </tr>
+        <tr id="publisher" style="display:none;">
+          <td class="label">Publisher:</td>
+          <td id="publisher" class="size">-</td>
+        </tr>
+        <tr id="firstpub" style="display:none;">
+          <td class="label">First Pub:</td>
+          <td id="firstpub" class="size">-</td>
+        </tr>
+         <tr id="count">
             <td class="label">Count:</td>
-            <td class="size">14209</td>
+            <td id="size" class="size">14209</td>
          </tr>
+        <tr id="uri" style="display:none;">
+          <td class="label">URI:</td>
+          <td id="uri" class="size">lib://</td>
+        </tr>
+        <tr id="link" style="display:none;">
+          <td class="label">Link:</td>
+          <td id="link" class="title">http://</td>
+        </tr>
+        <tr id="isfreeculture" style="display:none;">
+          <td class="label">Free Culture:</td>
+          <td id="isfreeculture" class="size">No</td>
+        </tr>
+        <tr id="fulltext" style="display:none;">
+          <td class="label">Full Text:</td>
+          <td id="fulltext" class="size">No</td>
+        </tr>
+        <tr id="isocr" style="display:none;">
+          <td class="label">OCR:</td>
+          <td id="isocr" class="size">No</td>
+        </tr>
       </table>
    </div>
    <ul>
