fixes for pagination

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -68,6 +68,8 @@
    <ul>
       <li id="full-results"><span class="padded">Full Results</span></li>
       <li id="hide-full-results"><span class="padded">Hide Full Results</span></li>
+      <li id="next-results"><span class="padded">&nbsp;&nbsp;&gt;&gt; Next Results</span></li>
+      <li id="prev-results"><span class="padded">&nbsp;&nbsp;&lt;&lt; Previous Results</span></li>
       <li id="pin"><span class="padded">Pin</span></li>
       <li id="unpin"><span class="padded">Unpin</span></li>
       <li id="trace"><span class="padded">Trace Path</span></li>
