--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,9 +35,9 @@
           <td class="label">Publisher:</td>
           <td id="publisher" class="size">-</td>
         </tr>
-        <tr id="firstpub" style="display:none;">
-          <td class="label">First Pub:</td>
-          <td id="firstpub" class="size">-</td>
+        <tr id="pubdates" style="display:none;">
+          <td class="label">Published:</td>
+          <td id="pubdates" class="size">-</td>
         </tr>
          <tr id="count">
             <td class="label">Count:</td>
