displaying links in node menu

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -271,6 +271,10 @@ footer {
    stroke-width: 1px;
 }
 
+td.label {
+  word-break: normal;
+}
+
 #menu {
   color: black;
   background-color: #f5f5f5;
@@ -284,7 +288,7 @@ footer {
   position: absolute;
   display: none;
   cursor: default;
-  word-break: break-all;
+  word-break: break-word;
 
   .titlebar {
     padding: 1px 1px 3px 5px;
