--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -135,6 +135,12 @@ footer {
   fill: rgba(255,255,255,0.5);
 }
 
+.leaf.resource.disabled,
+.fixed.resource.disabled {
+  stroke: #444;
+  fill: url(/#gradient-arc-root-normal);
+}
+
 .leaf {
 }
 .leaf.resource {
