--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -65,6 +65,7 @@
         </tr>
       </table>
    </div>
+  <div id="not-subscriber-msg"><span class="warning">Your library does not subscribe to this resource.</span></div>
    <ul>
       <li id="full-results"><span class="padded">Full Results</span></li>
       <li id="hide-full-results"><span class="padded">Hide Full Results</span></li>
