--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,8 @@
 </body>
 <div id="footer-panel">
   <button id="show-timeline-button">Show Timeline</button>
+  <div id="loading-timeline">Loading Timeline Data</div>
+  <div id="bigdiva-logo"></div>
 </div>
 <div id="timeline-tabs" class="tabs">
   <ul id="timeline-mode" class="tab-links">
