--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
          <input id="reset" type="button" value="Reset"/>
          <input id="recenter" type="button" value="Recenter"/>
          <input id="filter" type="button" value="Filter"/>
-
+         <a id="help" target="_blank" href="http://idhmc.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
       </div>
    </div>
    <div style="clear: both"></div>
@@ -56,6 +56,7 @@
   <button id="show-timeline-button">Show Timeline</button>
   <div id="loading-timeline">Loading Timeline Data</div>
   <div id="bigdiva-logo"></div>
+  <a id="help" target="_blank" href="http://idhmc.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
 </div>
 <div id="timeline-tabs" class="tabs">
   <ul id="timeline-mode" class="tab-links">
