--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <script src="http://d3js.org/d3.v3.js"></script>
   <script type="text/javascript" src="/assets/aight.d3.min.js"></script>
+  <script type="text/javascript">
+      gArcLogoImagePath = "<%= image_path 'arc-logo.png' %>";
+  </script>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "d3_slider", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
