fixed problems with help size and IE recenter button text being offcenter

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <title>ARC Catalog Visualization</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <script src="http://d3js.org/d3.v3.js"></script>
-  <script type="text/javascript" src="/assets/aight.d3.min.js"></script>
+  <!--<script type="text/javascript" src="/assets/aight.d3.min.js"></script>-->
   <script type="text/javascript">
       gArcLogoImagePath = "<%= image_path 'arc-logo.png' %>";
   </script>
