fixed problem with results sometimes having duplicates of nodes already saved

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -53,8 +53,8 @@ a#help:visited {
    font-weight: bold;
    #left-header {
       float:left;
-      p {
-        margin: 10px 0 0 10px;
+      h2 {
+        margin: 4px 0 -5px 4px;
       }
       #key {
         font-size: 0.6em;
