--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,9 @@
 
 <div id="site-header">
    <div id="left-header">
-      <p>ARC Catalog Visualization</p>
+      <h2>BigDIVA</h2>
       <div id="key">
-         <span class="key">Key:</span>
+         <span class="key">Visualize By:</span>
          <span id="resource-block" class="text-button selected"><label>Resource</label><span class="block resource"></span></span>
          <span id="genre-block" class="text-button"><label>Genre</label><span class="block genre"></span></span>
          <span id="discipline-block" class="text-button"><label>Discipline</label><span class="block discipline"/></span></span>
