--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,6 +14,7 @@
 
 
 <div id="menu">
+   <div id="preload-01"></div>
    <div class="titlebar">
       <span>Node Menu</span>
       <div class="button-group">
