fixed problem with nodes that start empty from a search not being colored properly when timeline is moved and they add data

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -196,10 +196,10 @@ footer {
   stroke: #b30000;
 }
 
-.leaf.no-data {
-  stroke: rgba(100,100,100,0.5);
-  fill: rgba(100,100,100,0.5);
-}
+//.leaf.no-data {
+//  stroke: rgba(100,100,100,0.5);
+//  fill: rgba(100,100,100,0.5);
+//}
 
 // parent is only used for resource/archive nodes
 .parent {
