--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -68,20 +68,20 @@
    </div>
   <div id="not-subscriber-msg"><span class="warning">Your library does not subscribe to this resource.</span></div>
    <ul>
-      <li id="full-results"><span class="padded">Full Results</span></li>
-      <li id="hide-full-results"><span class="padded">Hide Full Results</span></li>
-      <li id="next-results"><span class="padded">&nbsp;&nbsp;&gt;&gt; Next Results</span></li>
-      <li id="prev-results"><span class="padded">&nbsp;&nbsp;&lt;&lt; Previous Results</span></li>
       <li id="pin"><span class="padded">Pin</span></li>
       <li id="unpin"><span class="padded">Unpin</span></li>
       <li id="trace"><span class="padded">Trace Path</span></li>
       <li id="untrace"><span class="padded">Untrace Path</span></li>
-      <li id="collapse"><span class="padded">Collapse</span></li>
-      <li id="expand"><span class="padded">Expand</span></li>
-      <hr/>
+      <hr id="facet-divider"/>
       <li id="archive"><input type="checkbox"><span>Resource</span></li>
       <li id="genre"><input type="checkbox"><span>Genre</span></li>
       <li id="discipline"><input type="checkbox"><span>Discipline</span></li>
       <li id="doc_type"><input type="checkbox"><span>Format</span></li>
+      <li id="full-results"><input type="checkbox"><span>Individual Results</span></li>
+      <li id="next-results"><span class="padded">&nbsp;&nbsp;&gt;&gt; Next Results</span></li>
+      <li id="prev-results"><span class="padded">&nbsp;&nbsp;&lt;&lt; Previous Results</span></li>
+      <hr id="collapse-divider"/>
+      <li id="collapse"><span class="padded">Collapse</span></li>
+      <li id="expand"><span class="padded">Expand</span></li>
    </ul>
 </div>
