--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -45,18 +45,6 @@ a#help:visited {
   color: #0000CB;
 }
 
-#footer-panel a#help {
-  background-color: rgba(245, 245, 245, 0.75);
-  position: fixed;
-  bottom: 46px;
-  padding: 4px 20px 6px 20px;
-  border-radius: 10px;
-  font-size: 16px;
-}
-#footer-panel a#help.timeline-adjust {
-  bottom: 122px;
-}
-
 #site-header {
    position: fixed;
    top: 0;
@@ -68,6 +56,8 @@ a#help:visited {
    background-color: #f5f5f5;
    color: #444;
    font-weight: bold;
+   height: 95px;
+   
    #left-header {
       float:left;
       h2 {
@@ -75,9 +65,14 @@ a#help:visited {
       }
       #key {
         font-size: 0.7em;
-        color: #777;
+        color: #888;
         margin: 8px 0 0 15px;
         padding: 5px 0px 5px 10px;
+        margin: 0;
+        position: absolute;
+        left: 2px;
+        bottom: 0px;
+  
         .key {
           position: relative;
           top: -3px;
@@ -118,7 +113,7 @@ a#help:visited {
         }
         .text-button {
           cursor: pointer;
-          color: #444;
+          color: #888;
         }
         .text-button label {
           cursor: pointer;
@@ -451,6 +446,9 @@ td.label {
 div.search {
   text-align: right;
   float: right;
+  margin-top: 15px;
+  margin-right: 10px;
+  
   input[type=text] {
     width: 250px;
     margin-right: 5px;
@@ -643,48 +641,101 @@ div.search {
 }
 
 #footer-panel {
-  position: fixed;
-  bottom: 0px;
-  height: 40px;
-  left: 20px;
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   
+   #loading-timeline {
+      background-image: image-url('loader.gif');
+      background-repeat: no-repeat;
+      background-size: 14%;
+      background-position: 4px;
+      padding-left: 38px;
+      background-color: rgba(245, 245, 245, 0.75);
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      height: 29px;
+      border-radius: 0 16px 0 0;
+      padding-right: 12px;
+      padding-top: 6px;
+      cursor: default;
+      border-top: 2px solid black;
+      border-right: 2px solid black;
+   }
+  
+   #show-timeline-button {
+      font-size: 16px;
+      border-radius: 0 16px 0 0;
+      border: 0;
+      cursor: pointer;
+      padding: 9px 82px 9px 20px;
+      border-top: 2px solid black;
+      border-right: 2px solid black;
+      background-color: rgba(245, 245, 245, 0.75);
+      &:hover {
+         opacity: 1;
+         background-color: #e5e5e5;
+      }
+   }
+   
+   a#help-lower {
+      background-color: rgba(245, 245, 245, 0.75);
+      position: fixed;
+      bottom: 36px;
+      left: 0px;
+      padding: 4px 20px 6px 20px;
+      border-radius: 0 10px 10px 0;
+      font-size: 16px;
+      color:black;
+      text-decoration: none;
+      border: 2px solid black;
+      border-left: 0;
+      &:hover {
+         background-color: #e5e5e5;
+      }
+   }
+   
+   a#help.timeline-adjust {
+      bottom: 122px;
+   }
 }
+
 #bigdiva-logo {
-  background: image-url('bigdiva-logo-sm.png') no-repeat;
-  height: 101px;
-  width: 80px;
+  background: image-url('bigdiva-v.png') no-repeat;
+  height: 80px;
+  width: 101px;
   position: fixed;
-  bottom: 4px;
+  bottom: 8px;
   z-index: 20;
   right: 8px;
 }
+
 #bigdiva-logo.timeline-adjust {
   bottom: 76px;
 }
-#loading-timeline {
-  background-image: image-url('loader.gif');
-  background-repeat: no-repeat;
-  background-size: 14%;
-  background-position: 4px;
-  padding-left: 38px;
-  background-color: rgba(245, 245, 245, 0.75);
-  position: fixed;
-  bottom: 10px;
-  height: 29px;
-  border-radius: 16px;
-  padding-right: 12px;
-  padding-top: 6px;
-  cursor: default;
+
+#timeline-tabs {
+   ul {
+      padding-left:0;
+      margin-left:0;
+   }
+   #first-pub-block {
+      margin: 0px 1px 0 0;
+      a { 
+         border-radius: 0 8px 0 0;
+         border-left:0;
+      }
+   }
 }
-#show-timeline-button {
-  font-size: 16px;
-  border-radius: 8px;
-}
+
 .tabs {
   width:100%;
   display:inline-block;
   position: fixed;
   bottom: 57px;
 }
+
 
 .tab-links {
   width: 950px;
@@ -712,11 +763,15 @@ div.search {
   font-weight:600;
   color:#4c4c4c;
   text-decoration: none;
-}
+  border: 2px solid black;
+  border-bottom: 0;
+  opacity: 0.75;
 
-.tab-links a:hover {
-  background:#d1d5da;
-  text-decoration:none;
+  &:hover {
+      background:#d1d5da;
+      text-decoration:none;
+      opacity: 1;
+  }
 }
 
 li.selected a, li.selected a:hover {
@@ -725,6 +780,7 @@ li.selected a, li.selected a:hover {
   font-size:14px;
   font-weight: bold;
   margin-top: -2px;
+  opacity: 1;
 }
 
 .tab {
