--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,6 @@
   <title>ARC Catalog Visualization</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <script src="http://d3js.org/d3.v3.js"></script>
-  <!--<script type="text/javascript" src="/assets/aight.d3.min.js"></script>-->
   <script type="text/javascript">
       gArcLogoImagePath = "<%= image_path 'arc-logo.png' %>";
       gDebugMode = <%= @debugMode ? 'true' : 'false' %>;
@@ -21,73 +20,59 @@
 </head>
 <body>
 
-<div id="site-header">
-   <div id="left-header">
-      <h2>BigDIVA</h2>
-      <div id="key">
-         <span class="key">Visualize By:</span>
-         <span id="resource-block" class="text-button selected"><label>Resource</label><span class="block resource"></span></span>
-         <span id="genre-block" class="text-button"><label>Genre</label><span class="block genre"></span></span>
-         <span id="discipline-block" class="text-button"><label>Discipline</label><span class="block discipline"></span></span>
-         <span id="format-block" class="text-button"><label>Format</label><span class="block format"></span></span>
+   <div id="site-header">
+      <div id="left-header">
+         <%= image_tag("bigdiva-logo-lg.png") %>
+         <%= render :partial => '/layouts/key' %>
       </div>
+     <div id="debuglog"></div>
+      <%= render :partial => '/layouts/search' %>
+      <div style="clear: both"></div>
    </div>
-  <div id="debuglog"></div>
-   <div class="search">
-      <div>
-         <label for="query">Search:</label><input id="query" type="text" placeholder="Search Terms"/>
-      </div>
-      <!--<div>-->
-         <!--<label for="from">From Year:</label><input id="from" class="date-field" type="text" placeholder="YYYY"/>-->
-         <!--<label for="to">To Year:</label><input id="to" class="date-field" type="text" placeholder="YYYY"/>-->
-      <!--</div>-->
-      <div>
-         <input id="reset" type="button" value="Reset"/>
-         <input id="recenter" type="button" value="Recenter"/>
-         <input id="filter" type="button" value="Filter"/>
-         <a id="help" target="_blank" href="http://idhmc.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
-      </div>
+   
+   <div id="main-content">
+      <%= yield %>
    </div>
-   <div style="clear: both"></div>
-</div>
+   
+   <div id="dim-overlay"></div>
+   </body>
+   
+   <div id="footer-panel">
+     <button id="show-timeline-button">Show Timeline</button>
+     <div id="loading-timeline">Loading Timeline Data</div>
+     <div id="bigdiva-logo"></div>
+     <a id="help-lower" target="_blank" href="http://idhmc.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
 
-<div id="main-content">
-   <%= yield %>
-</div>
-<div id="dim-overlay"></div>
-</body>
-<div id="footer-panel">
-  <button id="show-timeline-button">Show Timeline</button>
-  <div id="loading-timeline">Loading Timeline Data</div>
-  <div id="bigdiva-logo"></div>
-  <a id="help" target="_blank" href="http://idhmc.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
-</div>
-<div id="timeline-tabs" class="tabs">
-  <ul id="timeline-mode" class="tab-links">
-    <li id="first-pub-block" class="selected"><a href="#tab-first-pub">First Publication Year</a></li>
-    <li id="decade-block"><a href="#tab-decade">Decades Published</a></li>
-    <li id="quarter-century-block"><a href="#tab-quarter-century">Quarter-Centuries Published</a></li>
-    <li id="half-century-block"><a href="#tab-half-century">Half-Centuries Published</a></li>
-    <li id="century-block"><a href="#tab-century">Centuries Published</a></li>
-  </ul>
-</div>
-<footer>
-  <div id="timeline-panel" class="tabbed-panels">
-      <div id="tab-first-pub" class="tab">
-        <div id="timeline-first-pub"></div>
-      </div>
-      <div id="tab-decade" class="tab">
-        <div id="timeline-decade"></div>
-      </div>
-      <div id="tab-quarter-century" class="tab">
-        <div id="timeline-quarter-century"></div>
-      </div>
-      <div id="tab-half-century" class="tab">
-        <div id="timeline-half-century"></div>
-      </div>
-      <div id="tab-century" class="tab">
-        <div id="timeline-century"></div>
-      </div>
-  </div>
-</footer>
+   
+      <div id="timeline-tabs" class="tabs">
+        <ul id="timeline-mode" class="tab-links">
+          <li id="first-pub-block" class="selected"><a href="#tab-first-pub">First Publication Year</a></li>
+          <li id="decade-block"><a href="#tab-decade">Decades Published</a></li>
+          <li id="quarter-century-block"><a href="#tab-quarter-century">Quarter-Centuries Published</a></li>
+          <li id="half-century-block"><a href="#tab-half-century">Half-Centuries Published</a></li>
+          <li id="century-block"><a href="#tab-century">Centuries Published</a></li>
+        </ul>
+      </div>   
+   </div>
+   
+   <footer>
+     <div id="timeline-panel" class="tabbed-panels">
+         <div id="tab-first-pub" class="tab">
+           <div id="timeline-first-pub"></div>
+         </div>
+         <div id="tab-decade" class="tab">
+           <div id="timeline-decade"></div>
+         </div>
+         <div id="tab-quarter-century" class="tab">
+           <div id="timeline-quarter-century"></div>
+         </div>
+         <div id="tab-half-century" class="tab">
+           <div id="timeline-half-century"></div>
+         </div>
+         <div id="tab-century" class="tab">
+           <div id="timeline-century"></div>
+         </div>
+     </div>
+   </footer>
+   
 </html>
