--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,6 +46,7 @@
    
       <div id="timeline-tabs" class="tabs">
         <ul id="timeline-mode" class="tab-links">
+          <li id="hide-timeline" ><a id="hide-timeline">Hide Timeline</a></li>
           <li id="first-pub-block" class="selected"><a href="#tab-first-pub">First Publication Year</a></li>
           <li id="decade-block"><a href="#tab-decade">Decades Published</a></li>
           <li id="quarter-century-block"><a href="#tab-quarter-century">Quarter-Centuries Published</a></li>
