protect agains nil in model. fully remove timeline from query interface; nodes filered client side. refresh viz when timeline tabs change

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
    
    <div id="footer-panel">
      <button id="show-timeline-button">Show Timeline</button>
-     <div id="loading-timeline">Loading Timeline Data</div>
+     <div id="loading-timeline">Loading Timeline</div>
      <div id="bigdiva-logo"></div>
      <a id="help-lower" target="_blank" href="http://idhmc.tamu.edu/image-store/bgpages/bigdiva-help.html">Help</a>
 
@@ -47,11 +47,11 @@
       <div id="timeline-tabs" class="tabs">
         <ul id="timeline-mode" class="tab-links">
           <li id="hide-timeline" ><a id="hide-timeline">Hide Timeline</a></li>
-          <li id="first-pub-block" class="selected"><a href="#tab-first-pub">First Publication Year</a></li>
-          <li id="decade-block"><a href="#tab-decade">Decades Published</a></li>
-          <li id="quarter-century-block"><a href="#tab-quarter-century">Quarter-Centuries Published</a></li>
-          <li id="half-century-block"><a href="#tab-half-century">Half-Centuries Published</a></li>
-          <li id="century-block"><a href="#tab-century">Centuries Published</a></li>
+          <li id="first-pub-block" class="timeline-tab selected"><a href="#tab-first-pub">First Publication Year</a></li>
+          <li id="decade-block" class="timeline-tab"><a href="#tab-decade">Decades Published</a></li>
+          <li id="quarter-century-block" class="timeline-tab"><a href="#tab-quarter-century">Quarter-Centuries Published</a></li>
+          <li id="half-century-block" class="timeline-tab"><a href="#tab-half-century">Half-Centuries Published</a></li>
+          <li id="century-block" class="timeline-tab"><a href="#tab-century">Centuries Published</a></li>
         </ul>
       </div>   
    </div>
