--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -52,7 +52,7 @@ a#help:visited {
    right: 0;
    font-size: 1.2em;
    padding: 5px 10px;
-   border-bottom: 2px solid #999;
+   border-bottom: 1px solid #999;
    background-color: #f5f5f5;
    color: #444;
    font-weight: bold;
@@ -662,9 +662,9 @@ div.search {
       padding-top: 4px;
       padding-bottom: 2px;
       cursor: default;
-      border-top: 2px solid black;
-      border-right: 2px solid black;
-      border-bottom: 2px solid black;
+      border-top: 1px solid black;
+      border-right: 1px solid black;
+      border-bottom: 1px solid black;
    }
   
    #show-timeline-button {
@@ -674,13 +674,14 @@ div.search {
       cursor: pointer;
       position: absolute;
       padding: 4px 5px 6px 5px;
-      border-top: 2px solid black;
-      border-right: 2px solid black;
-      border-bottom: 2px solid black;
+      border-top: 1px solid black;
+      border-right: 1px solid black;
+      border-bottom: 1px solid black;
       bottom: 6px;
       width: 120px;
       background-color: #ddd;
       opacity: 0.75;
+      outline: 0;
       &:hover {
          opacity: 1;
          background-color: #e5e5e5;
@@ -691,14 +692,14 @@ div.search {
       background-color: #ddd;
       opacity: 0.75;
       position: fixed;
-      bottom: 36px;
+      bottom: 37px;
       left: 0px;
       padding: 4px 25px 6px 5px;
       border-radius: 0 10px 10px 0;
       font-size: 16px;
       color:black;
       text-decoration: none;
-      border: 2px solid black;
+      border: 1px solid black;
       border-left: 0;
       width: 88px;
       &:hover {
@@ -732,7 +733,11 @@ div.search {
       margin-left:0;
    }
    #first-pub-block {
-        margin-left: 135px;
+      margin-left: 0;
+      a {
+         border-left:0;
+         border-radius: 0 8px 0 0;
+      }
    }
    #hide-timeline {
       margin: 0;
