--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <!--[if lt IE 9]>
   <script type="text/javascript" src="aight.min.js"></script>
   <![endif]-->
-  <title>ARC Catalog Visualization</title>
+  <title>BigDIVA</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <script src="http://d3js.org/d3.v3.js"></script>
   <script type="text/javascript">
