--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,11 +73,11 @@
       <li id="trace"><span class="padded">Trace Path</span></li>
       <li id="untrace"><span class="padded">Untrace Path</span></li>
       <hr id="facet-divider"/>
-      <li id="archive"><input type="checkbox"><span>Resource</span></li>
-      <li id="genre"><input type="checkbox"><span>Genre</span></li>
-      <li id="discipline"><input type="checkbox"><span>Discipline</span></li>
-      <li id="doc_type"><input type="checkbox"><span>Format</span></li>
-      <li id="full-results"><input type="checkbox"><span>Individual Results</span></li>
+      <li id="archive"><label><input type="checkbox">Resource</label></li>
+      <li id="genre"><label><input type="checkbox">Genre</label></li>
+      <li id="discipline"><label><input type="checkbox">Discipline</label></li>
+      <li id="doc_type"><label><input type="checkbox">Format</label></li>
+      <li id="full-results"><label><input type="checkbox">Individual Results</label></li>
       <li id="next-results"><span class="padded">&nbsp;&nbsp;&gt;&gt; Next Results</span></li>
       <li id="prev-results"><span class="padded">&nbsp;&nbsp;&lt;&lt; Previous Results</span></li>
       <hr id="collapse-divider"/>
