re-work popup menu checkbox behavior

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,14 +72,14 @@
       <li id="unpin"><span class="padded">Unpin</span></li>
       <li id="trace"><span class="padded">Trace Path</span></li>
       <li id="untrace"><span class="padded">Untrace Path</span></li>
-      <hr id="facet-divider"/>
-      <li id="archive"><label><input type="checkbox">Resource</label></li>
-      <li id="genre"><label><input type="checkbox">Genre</label></li>
-      <li id="discipline"><label><input type="checkbox">Discipline</label></li>
-      <li id="doc_type"><label><input type="checkbox">Format</label></li>
-      <li id="full-results"><label><input type="checkbox">Individual Results</label></li>
-      <li id="next-results"><span class="padded">&nbsp;&nbsp;&gt;&gt; Next Results</span></li>
-      <li id="prev-results"><span class="padded">&nbsp;&nbsp;&lt;&lt; Previous Results</span></li>
+      <hr class='facet-control-ui' id="facet-divider"/>
+      <li class='facet-control-ui'><label><input id="archive" type="checkbox">Resource</label></li>
+      <li class='facet-control-ui'><label><input id="genre" type="checkbox">Genre</label></li>
+      <li class='facet-control-ui'><label><input id="discipline" type="checkbox">Discipline</label></li>
+      <li class='facet-control-ui'><label><input id="doc_type" type="checkbox">Format</label></li>
+      <li class='facet-control-ui'><label><input id="full-results" type="checkbox">Individual Results</label></li>
+      <li class='facet-control-ui' id="next-results"><span class="padded">&nbsp;&nbsp;&gt;&gt; Next Results</span></li>
+      <li class='facet-control-ui' id="prev-results"><span class="padded">&nbsp;&nbsp;&lt;&lt; Previous Results</span></li>
       <hr id="collapse-divider"/>
       <li id="collapse"><span class="padded">Collapse</span></li>
       <li id="expand"><span class="padded">Expand</span></li>
