--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -408,10 +408,12 @@ td.label {
     background-color: #dedede;
   }
 
+  label {
+   cursor: pointer;
+  }
   input[type="checkbox"] {
     margin-right: 10px;
     cursor:pointer;
-    pointer-events: none;
   }
 
   hr {
