--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,8 @@
    
    <div id="main-content">
       <%= yield %>
+      
+      <%= render :partial => '/layouts/sidebar' %>
    </div>
    
    <div id="dim-overlay"></div>
