show title, author, pub dates in sidebar

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -42,6 +42,21 @@ body {
    border-top: 1px solid #ccc;
    z-index: 10;
    
+   p.doc-name {
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 2px;
+      margin-bottom: 2px;
+   }
+   
+   label {
+      font-weight: bold;
+      font-family: sans-serif;
+      margin: 1px 5px;
+      width: 60px;
+      text-align: right;
+      display: inline-block;
+   }
+   
    .title {
       margin: 0;
       font-size: 0.8em;
