--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,7 +1,14 @@
 <div id="sidebar">
-   <p class="title"></p>
-   <div id="content">
+   <div class="top">
+      <p class="title"></p>
+      
+      <div id="list-page-ctls">
+         <div class="totals">
+            <label>Total: <span class="total"></span></label>
+         </div>
+      </div>
    </div>
-   <div id="list-page-ctls"
+   
+   <div id="content">
    </div>
 </div>
