--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,8 +3,16 @@
       <p class="title"></p>
       
       <div id="list-page-ctls">
-         <div class="totals">
-            <label>Total: <span class="total"></span></label>
+         <div class="counts">
+            <div class="total-div">
+               <label>Total: <span class="total"></span></label>
+            </div>
+            <div class="pages-div">
+               <label>Page: <span class="page-count"></span></label>
+            </div>
+            <div style="clear:both;"></div>
+         </div>
+         <div class="paging">
          </div>
       </div>
    </div>
