--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -13,6 +13,9 @@
             <div style="clear:both;"></div>
          </div>
          <div class="paging">
+            <div class="page-nav prev">&lt;&lt;</div>
+            <div class="page-nav next">&gt;&gt;</div>
+            <div style="clear:both;"></div>
          </div>
       </div>
    </div>
